--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,7 +1,6 @@
-<h1>{{ page.title }}</h1>
-
-<div id="content">
-  
-  {{ page.content }}
-  
+<div class="static-page-wrapper">
+	<h1>{{ page.title }}</h1>
+	<div id="content">
+	  {{ page.content }}
+	</div>
 </div>
