--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -2,7 +2,7 @@
   {% include 'sidebar' %}
 </div>
 
-<div id="content">
+<div id="content" class="index">
 
   {% if taxon %}
     {{ breadcrumbs }}
@@ -32,15 +32,12 @@
 		              <p class="product-price"><a href="/products/{{ product.to_param }}">{{ product.price_with_currency }}</a></p>
 								
 									<div class="social-container">
-										<!-- facebook like button -->
-										<div class="fb-like" data-href="{{ product.url }}" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
-										<!-- end - facebook like button -->
-								
-										<!-- twitter tweet button -->
-										<a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ product.url }}">Tweet</a>
-										<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-										<!-- end - twitter tweet button -->
-									</div>
+										<div class="fb-like-container">
+											<!-- facebook like button -->
+											<div class="fb-like" data-href="{{ product.url }}" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+											<!-- end - facebook like button -->
+										</div>
+									<div>
 								</div>
 								
 							</div>
