--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -37,6 +37,11 @@
 											<div class="fb-like" data-href="{{ product.url }}" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
 											<!-- end - facebook like button -->
 										</div>
+										<div class="pinterest-container">
+		                  <!-- pinterest button -->
+		                  <a href="http://pinterest.com/pin/create/button/?url={{ product.url }}&media={{ product.featured_image | image_size: 'large' }}&description={{ product.name }}" class="pin-it-button" count-layout="none"><img border="0" src="//assets.pinterest.com/images/PinExt.png" title="Pin It" /></a>
+		                  <!-- end - pinterest button -->
+										</div>
 									<div>
 								</div>
 								
