--- a/stylesheets/shop.css
+++ b/stylesheets/shop.css
@@ -1,6 +1,3 @@
-/* @override 
-	http://localhost:3000/assets/stylesheets/34/shop.css */
-
 /* 
 **************************************
 OmbuShop - Tu Tienda Online
@@ -10,114 +7,125 @@ File: shop.css
 **************************************
 */
 
+/* === RESET */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
-  margin: 0;
-  padding: 0;
   border: 0;
-  outline: 0;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
   font-family: inherit;
+  font-size: 100%;
+  font-style: inherit;
+  font-weight: inherit;
+  margin: 0;
+  outline: 0;
+  padding: 0;
   vertical-align: baseline;
 }
-*:focus { outline: 0; }
-body {
-  line-height: 1em;
-  color: black;
-  background: #ffffff;
-}
-ol, ul { list-style: none; }
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-  vertical-align: middle;
-}
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-q, blockquote { quotes: "" ""; }
-q:before { content: ""; }
-q:after { content: ""; }
-blockquote:before { content: ""; }
-blockquote:after { content: ""; }
-img a { border: none; }
-hr {
-  background: #dddddd;
-  color: #dddddd;
-  clear: both;
-  float: none;
-  width: 100%;
-  height: 0.1em;
-  margin: 0 0 1.45em;
-  border: none;
-}
-hr.space {
-  background: #dddddd;
-  color: #dddddd;
-  clear: both;
-  float: none;
-  width: 100%;
-  height: 0.1em;
-  margin: 0 0 1.45em;
-  border: none;
-  background: #ffffff;
-  color: #ffffff;
-}
+:focus {  outline: 0 }
+
+/* === GENERALES */
 body {
   line-height: 1.5;
   font-family: Helvetica, Arial, sans-serif;
-  color: #333333;
   font-size: 14px;
+  color: #111111;
+  background: #ffffff; /* old browsers */
+  background: -moz-linear-gradient(top, #FFFFFF 0%, #EEE 100%); /* firefox */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#EEE)); /* webkit */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#EEE',GradientType=0 ); /* ie */
+  margin-top: 0;
+}
+body.one-col #content {
+  display: inline;
+  float: left;
+  width: 950px;
+}
+body.two-col #content {
+  display: inline;
+  float: left;
+  width: 750px;
+}
+ol, ul {  list-style: none }
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  margin-bottom: 1.4em;
+  vertical-align: middle;
+  width: 100%;
+}
+caption, th, td {
+  font-weight: 400;
+  text-align: left;
+  vertical-align: middle;
+}
+q:before {  content: "" }
+q:after {  content: "" }
+blockquote:before {  content: "" }
+blockquote:after {  content: "" }
+img a {  border: none }
+hr {
+  background: #ddd;
+  border: none;
+  clear: both;
+  color: #ddd;
+  float: none;
+  height: .1em;
+  margin: 0 0 1.45em;
+  width: 100%;
+}
+hr.space {
+  background: #fff;
+  border: none;
+  clear: both;
+  color: #fff;
+  float: none;
+  height: .1em;
+  margin: 0 0 1.45em;
+  width: 100%;
 }
 h1 {
-  font-weight: normal;
-  color: #222222;
+  color: #222;
   font-size: 3em;
+  font-weight: 400;
   line-height: 1;
-  margin-bottom: 0.5em;
+  margin-bottom: .5em;
 }
-h1 img { margin: 0; }
+h1 img {  margin: 0 }
 h2 {
-  font-weight: normal;
-  color: #222222;
+  color: #222;
   font-size: 2em;
-  margin-bottom: 0.75em;
+  font-weight: 400;
+  margin-bottom: .75em;
 }
 h3 {
-  font-weight: normal;
-  color: #222222;
+  color: #222;
   font-size: 1.5em;
+  font-weight: 400;
   line-height: 1;
   margin-bottom: 1em;
 }
 h4 {
-  font-weight: normal;
-  color: #222222;
+  color: #222;
   font-size: 1.2em;
+  font-weight: 400;
   line-height: 1.25;
   margin-bottom: 1.25em;
 }
 h5 {
-  font-weight: bold;
-  color: #222222;
+  color: #222;
   font-size: 16px;
-	margin-bottom: 1em;
+  font-weight: 700;
+  margin-bottom: 1em;
 }
 h6 {
-  font-weight: normal;
-  color: #222222;
+  color: #222;
   font-size: 1em;
-  font-weight: bold;
+  font-weight: 700;
 }
-h2 img { margin: 0; }
-h3 img { margin: 0; }
-h4 img { margin: 0; }
-h5 img { margin: 0; }
-h6 img { margin: 0; }
-p { margin: 0 0 1.5em; }
+h2 img {  margin: 0 }
+h3 img {  margin: 0 }
+h4 img {  margin: 0 }
+h5 img {  margin: 0 }
+h6 img {  margin: 0 }
+p {  margin: 0 0 1.5em }
 p img.left {
   display: inline;
   float: left;
@@ -131,27 +139,27 @@ p img.right {
   padding: 0;
 }
 a {
-  text-decoration: underline;
   color: #2e6ab1;
+  text-decoration: underline;
 }
 blockquote {
-  margin: 1.5em;
-  color: #666666;
+  color: #666;
   font-style: italic;
+  margin: 1.5em;
 }
-strong { font-weight: bold; }
-em { font-style: italic; }
+strong {  font-weight: 700 }
+em {  font-style: italic }
 dfn {
   font-style: italic;
-  font-weight: bold;
+  font-weight: 700;
 }
-sup, sub { line-height: 0; }
-abbr, acronym { border-bottom: 1px dotted #666666; }
+sup, sub {  line-height: 0 }
+abbr, acronym {  border-bottom: 1px dotted #666 }
 address {
-  margin: 0 0 1.5em;
   font-style: italic;
+  margin: 0 0 1.5em;
 }
-del { color: #666666; }
+del {  color: #666 }
 pre {
   margin: 1.5em 0;
   white-space: pre;
@@ -160,35 +168,30 @@ pre, code, tt {
   font: 1em 'andale mono', 'lucida console', monospace;
   line-height: 1.5;
 }
-li ul { margin: 0;
-}
-li ol { margin: 0 1.5em; }
+li ul {  margin: 0 }
+li ol {  margin: 0 1.5em }
 ul {
-  margin: 0 1.5em 1.5em 1.5em;
   list-style-type: disc;
+  margin: 0 1.5em 1.5em;
 }
 ol {
-  margin: 0 1.5em 1.5em 1.5em;
   list-style-type: decimal;
+  margin: 0 1.5em 1.5em;
 }
-dl { margin: 0 0 1.5em 0; }
-dl dt { font-weight: bold; }
-dd { margin-left: 1.5em; }
-table {
-  margin-bottom: 1.4em;
-  width: 100%;
-}
-th { font-weight: bold; }
-thead th { background: #c3d9ff; }
-th, td, caption { padding: 4px 10px 4px 5px; }
-tr.even td { background: #e5ecf9; }
-tfoot { font-style: italic; }
-caption { background: #eeeeee; }
-.quiet { color: #666666; }
-.loud { color: #111111; }
+dl {  margin: 0 0 1.5em }
+dl dt {  font-weight: 700 }
+dd {  margin-left: 1.5em }
+th {  font-weight: 700 }
+thead th {  background: #c3d9ff }
+th, td, caption {  padding: 4px 10px 4px 5px }
+tr.even td {  background: #e5ecf9 }
+tfoot {  font-style: italic }
+caption {  background: #eee }
+.quiet {  color: #666 }
+.loud {  color: #111 }
 form p.field {
-  margin-bottom: 0.5em;
   clear: both;
+  margin-bottom: .5em;
 }
 form p.field span.req {
   color: red;
@@ -197,10 +200,10 @@ form p.field span.req {
   position: relative;
   top: -3px;
 }
-input{
-	padding: 3px;
-	font-size: 13px;
-	line-height: 1.4em;
+input {
+  font-size: 13px;
+  line-height: 1.4em;
+  padding: 3px;
 }
 form p.field input[type=text] {
   float: left;
@@ -210,216 +213,179 @@ form p.field select {
   float: left;
   margin: 0 5px 7px 0;
 }
-form p.field.radios { line-height: 150%; }
-label { font-weight: bold; }
-fieldset { margin-bottom: 1em; }
+form p.field.radios {  line-height: 150% }
+label {  font-weight: 700 }
+fieldset {  margin-bottom: 1em }
 legend {
   font-size: 150%;
-  font-weight: bold;
-  margin-bottom: 0.5em;
+  font-weight: 700;
+  margin-bottom: .5em;
 }
-
-/* PAGE STYLES */
-#page{
-	padding-bottom: 60px;
-}
+#page {  padding-bottom: 60px }
 #wrapper {
-  -moz-box-shadow: 		0 0 10px rgba(0, 0, 0, 0.12);
-	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.12);
-	box-shadow: 				0 0 10px rgba(0, 0, 0, 0.12);
-  background: #FFFFFF;
+  -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.12);
+  -moz-box-shadow:    0 0 10px rgba(0,0,0,0.12);
+  box-shadow:         0 0 10px rgba(0,0,0,0.12);
+  background: #FFF;
   border-top: 2px solid #000;
   margin: 15px auto 0;
   min-height: 500px;
   padding: 25px 20px 20px;
   position: relative;
 }
-#header {
-  min-height: 120px;
-  position: relative;
-  color: #2e6ab1;
-  clear: both;
-  margin: 0 auto;
-  width: 960px;
-}
-#header a { color: #2e6ab1; text-decoration:none}
-#header a:hover { color: #666; }
-#header a img{border: medium none;}
 
+/* === FOOTER */
 #footer {
   border-top: 2px solid #555;
+  clear: both;
   color: #777;
   font-size: 12px;
-  padding: 1em 1em 0em 1em;
-	overflow: auto;
-	clear: both;
-	min-height: 100px;
-	position: relative;
+  min-height: 100px;
+  overflow: auto;
+  padding: 1em 1em 0;
+  position: relative;
 }
 #footer div.store_footer {
-	width: 725px;
-	padding: 0;
-	display: block;
-	clear: none;
-	overflow: auto;
+  clear: none;
+  display: block;
+  overflow: auto;
+  padding: 0;
+  width: 725px;
 }
-#footer div.left { width: 37%; }
+#footer div.left {  width: 37% }
 #footer div.right {
-  width: 63%;
   text-align: right;
+  width: 63%;
 }
 #footer div.footer-area1, #footer div.footer-area2, #footer div.footer-area3 {
-	float: left;
-	width: 33%;
+  float: left;
+  width: 33%;
 }
-#footer div.footer-area1 > *, #footer div.footer-area2 > *, #footer div.footer-area3 > * {
-	padding-right: 20px;
-}
-
+#footer div.footer-area1 > *, #footer div.footer-area2 > *, #footer div.footer-area3 > * {  padding-right: 20px }
 #footer h3 {
-	margin-top: 3px;
-	margin-bottom: 8px;
+  margin-bottom: 8px;
+  margin-top: 3px;
 }
-
-#ombu-footer{margin-bottom: 0;text-align:right;}
-#ombu-footer p{margin-bottom:0;}
-#ombu-footer img{margin-top: -3px;}
-
-
-/* HEADER STYLES */
-#header {
-  background-color: white;
-  position: relative;
-  color: #2e6ab1;
-  clear: both;
-  height: 70px;
-  width: 950px;
-  margin: 0 auto;
+#ombu-footer {
+  margin-bottom: 0;
+  text-align: right;
 }
-#header a { color: #333; }
-#header a:hover { color: #111;background-color:transparent;}
-
-#head_logo{
-	float: left;
-	font-weight: bold;
-	letter-spacing: -1px;
-	margin-bottom: -14px;
-	margin-top: 35px;
-	max-width: 320px;
-}
-
-#head_logo a span {
-	display: none;
-}
-
-#admin-bar{background-color: #333;text-align: center;}
-#login-bar{
-	width: 980px;
-	margin: 0 auto;
-	display: block;
-	text-align: right;
-}
-#login-bar a {
-	color:#FFF;
-	text-shadow:0 1px 0 #000;
-	text-decoration: none;
-}
-#login-bar a:hover{color:#EEE;}
-
-
-#cart_bar{
-	text-align: right;
-	margin: 0 0 1em;
-}
-#cart_bar .cart-indicator {
-  list-style-type: none;
-}
-
-#cart_bar .cart-indicator a{
-	-webkit-border-radius: 0 0 3px 3px;-moz-border-radius: 0 0 3px 3px;border-radius: 0 0 3px 3px;
-	background-color: #666;
-	border-top: 1px solid #888;
-	color: white;
-	display: inline-block;
-	margin-right: -15px;
-	padding: 5px 15px;
-	text-shadow: 0 1px #333;
-}
-#cart_bar .cart-indicator a.empty{color: #aaa;}
-#cart_bar .cart-indicator a:hover{background-color:#555;border-top-color:#777;}
-#cart_bar{
-	float: right;
-}
-#search_bar{
-	float: right;
-	clear: both;
-	margin: -69px -15px 0 0;
-}
-#search_bar label{display:none;}
-
-ul#navigation_bar {
-	display: block;
-	margin: 0;
-	padding: 0;
-	position: absolute;
-	bottom: -15px;
-	right: -10px;
-	overflow: auto;
-	padding-top: 5px;
-	font-size: 13px;
-}
-
-ul#navigation_bar li {
-	float: left;
-	overflow: visible;
-	margin-right: 4px;
-}
-
-ul#navigation_bar li a {
-	color: #555;
-	display: block;
-	padding: 3px 8px;				
-	-webkit-transition: 	all 200ms ease-out;
-	-moz-transition: 			all 200ms ease-out;
-	-o-transition: 				all 200ms ease-out;
-	transition: 					all 200ms ease-out;
-	border-bottom: 3px solid #fff;
-} 
-
-ul#navigation_bar li.current-page a {
-	border-bottom: 3px solid #000;
-}
-
-ul#navigation_bar li a:hover {
-	color: #fff;
-	background-image: none;
-	background-color: #555;
-	border-bottom: 3px solid #555;
-	margin-top: -4px;
-	padding-bottom: 7px;
-	-webkit-text-shadow: 	0 1px 0 #000;
-	-moz-text-shadow: 		0 1px 0 #000;
-	-o-text-shadow: 			0 1px 0 #000;
-	text-shadow: 					0 1px 0 #000;
-}
-
-ul#navigation_bar li a:active {
-	color: #fff;
-	background-image: none;
-	background-color: #444;
-	border-bottom: 3px solid #444;
-	margin-top: -2px;
-	padding-bottom: 5px;
-	-webkit-transition: none;
-	-moz-transition: 		none;
-	-o-transition: 			none;
-	transition: 				none;
-}
-
+#ombu-footer p {  margin-bottom: 0 }
+#ombu-footer img {  margin-top: -3px }
 div#ombu-footer {
-	position: absolute;
-	bottom: 15px;
-	left: 0;
-	height: 38px;
+  bottom: 15px;
+  height: 38px;
+  left: 0;
+  position: absolute;
 }
 
+/* === HEADER */
+#header {
+  background-color: #FFF;
+  clear: both;
+  color: #2e6ab1;
+  height: 70px;
+  margin: 0 auto;
+  min-height: 120px;
+  position: relative;
+  width: 950px;
+}
+#header a {
+  color: #333;
+  text-decoration: none;
+}
+#header a:hover {
+  background-color: transparent;
+  color: #111;
+}
+#header a img {  border: none }
+#head_logo {
+  float: left;
+  font-weight: 700;
+  letter-spacing: -1px;
+  margin-bottom: -14px;
+  margin-top: 35px;
+  max-width: 320px;
+}
+#head_logo a span {  display: none }
+#cart_bar {
+  float: right;
+  margin: 0 0 1em;
+  text-align: right;
+}
+#cart_bar .cart-indicator {  list-style-type: none }
+#cart_bar .cart-indicator a {
+  -webkit-border-radius: 0 0 3px 3px;
+  -moz-border-radius:    0 0 3px 3px;
+  border-radius:         0 0 3px 3px;
+  background-color: #666;
+  border-top: 1px solid #888;
+  color: #FFF;
+  display: inline-block;
+  margin-right: -15px;
+  padding: 5px 15px;
+  text-shadow: 0 1px #333;
+}
+#cart_bar .cart-indicator a.empty {  color: #aaa }
+#cart_bar .cart-indicator a:hover {
+  background-color: #555;
+  border-top-color: #777;
+}
+#search_bar {
+  clear: both;
+  float: right;
+  margin: -69px -15px 0 0;
+}
+#search_bar label {  display: none }
+
+/* === NAVIGATION */
+ul#navigation_bar {
+  bottom: -15px;
+  display: block;
+  font-size: 13px;
+  margin: 0;
+  overflow: auto;
+  padding: 5px 0 0;
+  position: absolute;
+  right: -10px;
+}
+ul#navigation_bar li {
+  float: left;
+  margin-right: 4px;
+  overflow: visible;
+}
+ul#navigation_bar li a {
+  -webkit-transition: all 200ms ease-out;
+  -moz-transition:    all 200ms ease-out;
+  -o-transition:      all 200ms ease-out;
+  transition:         all 200ms ease-out;
+  border-bottom: 3px solid #fff;
+  color: #555;
+  display: block;
+  padding: 3px 8px;
+}
+ul#navigation_bar li.current-page a {  border-bottom: 3px solid #000 }
+ul#navigation_bar li a:hover {
+  -webkit-text-shadow: 0 1px 0 #000;
+  -moz-text-shadow:    0 1px 0 #000;
+  -o-text-shadow:      0 1px 0 #000;
+  text-shadow:         0 1px 0 #000;
+  background-color: #555;
+  background-image: none;
+  border-bottom: 3px solid #555;
+  color: #fff;
+  margin-top: -4px;
+  padding-bottom: 7px;
+}
+ul#navigation_bar li a:active {
+  -webkit-transition: none;
+  -moz-transition:    none;
+  -o-transition:      none;
+  transition:         none;
+  background-color: #444;
+  background-image: none;
+  border-bottom: 3px solid #444;
+  color: #fff;
+  margin-top: -2px;
+  padding-bottom: 5px;
+}
