--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,16 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 
   <head>
     <title>{{ shop.main_page_title }}</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-		<!-- Ombu Shop - Theme: Minimost -->
+    <!-- Ombu Shop - Theme: Minimost -->
 
     {{ 'reset.css' | stylesheet_tag }}
     {{ 'basic.css' | stylesheet_tag }}
     {{ 'buttons.css' | stylesheet_tag }}
     {{ 'advice.css' | stylesheet_tag }}
+    
+    <!-- Typography -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css' />
 
     {{ 'shop.css' | asset_url | stylesheet_tag }}
     {{ 'products.css' | asset_url | stylesheet_tag }}
@@ -33,41 +36,41 @@
 
     {{ content_for_header }}
 
-		<script type="text/javascript">
-			jQuery(document).ready(function(){
-				var $container = $('.product-listing');
-				$container.imagesLoaded(function(){
-				  $container.masonry({
-				    itemSelector : '.product'
-				  });
-				});
-			});
-		</script>
-		
-		{% if product %}
-		<!-- metatags para facebook -->
-		<meta property="og:title" content="{{ shop.main_page_title }} - {{ product.name }}" />
-		<meta property="og:type" content="product" />
-		<meta property="og:url" content="{{ product.url }}" />
-		<meta property="og:image" content="{{ product.featured_image | image_size: 'original' }}" />
-		<meta property="og:site_name" content="{{ shop.main_page_title }}" />
-		<meta property="fb:app_id" content="148526658594891" />
-		<!-- fin metatags para facebook -->
-		{% endif %}    
+    <script type="text/javascript">
+      jQuery(document).ready(function(){
+        var $container = $('.product-listing');
+        $container.imagesLoaded(function(){
+          $container.masonry({
+            itemSelector : '.product'
+          });
+        });
+      });
+    </script>
+    
+    {% if product %}
+    <!-- metatags para facebook -->
+    <meta property="og:title" content="{{ shop.main_page_title }} - {{ product.name }}" />
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="{{ product.url }}" />
+    <meta property="og:image" content="{{ product.featured_image | image_size: 'original' }}" />
+    <meta property="og:site_name" content="{{ shop.main_page_title }}" />
+    <meta property="fb:app_id" content="148526658594891" />
+    <!-- fin metatags para facebook -->
+    {% endif %}    
 
   </head>
 
   <body class="{% if template == 'show' %} one-col {% else %} two-col {% endif %}" {% if template == 'show' %} id="product-details" {% endif %}>
     <div id="fb-root"></div>
-		<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));</script>
- 		
-		<div id="all">
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+     
+    <div id="all">
 
       {% if current_user %}
         {% if current_user.is_admin? %}
@@ -127,29 +130,29 @@
             </form>
           </div>  
 
-					<!-- page navigation -->
-    			<ul id="navigation_bar"> 
-						{% if shop.homepage %}
-						<li><a href="/products">Productos</a></li>
-						{% endif %}
-						{% for page in pages %}
-						<li {% if page.url contains current_path and current_path != "/" %}class="current-page"{% endif %}><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></li>
-						{% endfor %}
-					</ul>
-					<!-- end page navigation -->
-					
+          <!-- page navigation -->
+          <ul id="navigation_bar"> 
+            {% if shop.homepage %}
+            <li><a href="/products">Productos</a></li>
+            {% endif %}
+            {% for page in pages %}
+            <li {% if page.url contains current_path and current_path != "/" %}class="current-page"{% endif %}><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></li>
+            {% endfor %}
+          </ul>
+          <!-- end page navigation -->
+          
         </div><!-- end "header" -->
 
         <div id="wrapper" class="container">
 
           {{ content_for_layout }}
 
-					<div id="footer">
+          <div id="footer">
             {{ content_for_footer }}
             <div class="store_footer">
               {{ shop.footer }}
             </div>
-					</div> <!-- end "footer" -->
+          </div> <!-- end "footer" -->
         </div> <!-- end "wrapper" -->
       </div> <!-- end "page" -->
     </div> <!-- end "all" -->
