--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,373 +57,234 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#373737;
-  background: #212121;
+  color: #444;
+  background: #E0EFEC;
   font-size: 16px;
-  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+  font-family: "Lato", "Georgia", "Lucida Sans", Verdana, Arial, sans-serif;
+  font-weight: 300;
   line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
 }
-
 h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
-  color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
-  letter-spacing: -1px;
+  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
 }
-
-h1 {
-  font-size: 36px;
-  font-weight: 700;
-}
-
-h2 {
-  padding-bottom: 10px;
-  font-size: 32px;
-  background: url('../images/bg_hr.png') repeat-x bottom;
-}
-
 h3 {
-  font-size: 24px;
+  font-size: 1.2em;
+  margin-top: 1.3em;
 }
-
-h4 {
-  font-size: 21px;
-}
-
-h5 {
-  font-size: 18px;
-}
-
-h6 {
-  font-size: 16px;
-}
-
-p {
-  margin: 10px 0 15px 0;
-}
-
-footer p {
-  color: #f2f2f2;
-}
-
-a {
-  text-decoration: none;
-  color: #FF8C2F;
-  text-shadow: none;
-
-  transition: color 0.5s ease;
-  transition: text-shadow 0.5s ease;
-  -webkit-transition: color 0.5s ease;
-  -webkit-transition: text-shadow 0.5s ease;
-  -moz-transition: color 0.5s ease;
-  -moz-transition: text-shadow 0.5s ease;
-  -o-transition: color 0.5s ease;
-  -o-transition: text-shadow 0.5s ease;
-  -ms-transition: color 0.5s ease;
-  -ms-transition: text-shadow 0.5s ease;
-}
-
-#main_content a:hover {
-  color: #0069ba;
-  text-shadow: #0090ff 0px 0px 2px;
-}
-
-footer a:hover {
-  color: #43adff;
-  text-shadow: #0090ff 0px 0px 2px;
-}
-
-em {
-  font-style: italic;
-}
-
-strong {
-  font-weight: bold;
-}
-
 img {
-  position: relative;
-  margin: 0 auto;
-  max-width: 739px;
-  padding: 5px;
-  margin: 10px 0 10px 0;
-  border: 1px solid #ebebeb;
-
-  box-shadow: 0 0 5px #ebebeb;
-  -webkit-box-shadow: 0 0 5px #ebebeb;
-  -moz-box-shadow: 0 0 5px #ebebeb;
-  -o-box-shadow: 0 0 5px #ebebeb;
-  -ms-box-shadow: 0 0 5px #ebebeb;
+  width: 80%;
+  height: auto;
+  margin: 20px auto;
+  display: block;
 }
+a {
+  color: #FF8C2F;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+p {
+  font-size: 1.05em;
+}
+
+/* ================================== */
+/* HEADER */
+
+#header_wrap {
+  background: #4A382F;
+  box-shadow: rgba(0,0,0,.4) 0 3px 18px inset,
+              rgba(0,0,0,.3) 0 3px 4px;
+  height: 70px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+header {
+  padding-top: 1px;
+  max-width: 700px;
+  margin: 0 auto;
+  position: relative;
+}
+#ombushop_logo {
+  background: url('../images/ombushop-logo.png') no-repeat top left;
+  width: 155px;
+  height: 41px;
+  text-indent: -20000px;
+  display: block;
+  margin-top: 13px;
+}
+#forkme_banner {
+  display: block;
+  position: absolute;
+  top:0;
+  right: 0;
+  z-index: 10;
+  padding: 10px 50px 10px 10px;
+  color: #fff;
+  background: url('../images/blacktocat.png') #2BA47D no-repeat 95% 50%;
+  font-size: .8em;
+  font-weight: 700;
+  box-shadow: 0 0 10px rgba(0,0,0,.5);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+  text-decoration: none;
+  -webkit-transition: 200ms padding;
+  -moz-transition: 200ms padding;
+  -ms-transition: 200ms padding;
+  -o-transition: 200ms padding;
+  transition: 200ms padding;
+}
+#forkme_banner:hover {
+  padding-top: 20px;
+}
+a.download_link {
+  font-weight: 400;
+  display: inline-block;
+  margin: 5px;
+  padding: 8px 20px;
+  background: #FF8C2F;
+  color: #fff;
+  border-radius: 3px;
+}
+a.download_link:hover {
+  text-decoration: none;
+  box-shadow: rgba(255,255,255,.3) 0 3px 3px inset,
+              rgba(0,0,0,.3) 0 -3px 3px inset;
+  background: #ff8f00;
+}
+a.download_link:active {
+  text-decoration: none;
+  box-shadow: rgba(255,255,255,.3) 0 -3px 3px inset,
+              rgba(0,0,0,.3) 0 3px 3px inset;
+  background: #d3660f;
+}
+
+/* ================================== */
+/* MAIN CONTENT */
+
+#main_content {
+  background: #fff;
+  max-width: 660px;
+  padding: 20px 20px 40px 20px;
+}
+#main_content header {
+  background: #ffffdf;
+  margin: -20px -20px 2em -20px;
+  padding: 20px 20px 30px 20px;
+  border-bottom: #f1f1d1 1px solid;
+}
+#downloads {
+  text-align: center;
+}
+#project_title {
+  font-family: "Lato", "Georgia", "Lucida Sans", Verdana, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 2em;
+  line-height: 1;
+  color: #2BA47D;
+  margin-bottom: 0;
+  text-align: center;
+}
+#project_tagline {
+  font-family: "Lato", "Georgia", "Lucida Sans", Verdana, Arial, sans-serif;
+  font-weight: 700;
+  font-size: .9em;
+  color: #4a382f;
+  margin-top: .6em;
+  margin-bottom: 1em;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  text-align: center;
+}
+
+/* ================================== */
+/* FOOTER */
+
+#footer_wrap {
+  background: #4A382F;
+  color: #fff;
+  padding: 20px 0;
+  border-top: #41312a 4px solid;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+footer {
+  max-width: 700px;
+  margin: 0 auto;
+  position: relative;
+}
+
+/* ================================== */
+/* CODE */
 
 pre, code {
   width: 100%;
   color: #222;
   background-color: #fff;
-
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 14px;
-
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
-
-
-
 }
-
 pre {
   width: 100%;
   padding: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,.1);
   overflow: auto;
 }
-
 code {
   padding: 3px;
   margin: 0 3px;
   box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
-
 pre code {
   display: block;
   box-shadow: none;
 }
 
-blockquote {
-  color: #666;
-  margin-bottom: 20px;
-  padding: 0 0 0 20px;
-  border-left: 3px solid #bbb;
-}
 
-ul, ol, dl {
-  margin-bottom: 15px
-}
-
-ul li {
-  list-style: inside;
-  padding-left: 20px;
-}
-
-ol li {
-  list-style: decimal inside;
-  padding-left: 20px;
-}
-
-dl dt {
-  font-weight: bold;
-}
-
-dl dd {
-  padding-left: 20px;
-  font-style: italic;
-}
-
-dl p {
-  padding-left: 20px;
-  font-style: italic;
-}
-
-hr {
-  height: 1px;
-  margin-bottom: 5px;
-  border: none;
-  background: url('../images/bg_hr.png') repeat-x center;
-}
-
-table {
-  border: 1px solid #373737;
-  margin-bottom: 20px;
-  text-align: left;
- }
-
-th {
-  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  padding: 10px;
-  background: #373737;
-  color: #fff;
- }
-
-td {
-  padding: 10px;
-  border: 1px solid #373737;
- }
-
-form {
-  background: #f2f2f2;
-  padding: 20px;
-}
-
-img {
-  width: 100%;
-  max-width: 100%;
-}
-
-/*******************************************************************************
-Full-Width Styles
-*******************************************************************************/
-
-.outer {
-  width: 100%;
-}
-
-.inner {
-  position: relative;
-  max-width: 640px;
-  padding: 20px 10px;
-  margin: 0 auto;
-}
-
-#forkme_banner {
-  display: block;
-  position: absolute;
-  top:0;
-  right: 10px;
-  z-index: 10;
-  padding: 10px 50px 10px 10px;
-  color: #fff;
-  background: url('../images/blacktocat.png') #2BA47D no-repeat 95% 50%;
-  font-weight: 700;
-  box-shadow: 0 0 10px rgba(0,0,0,.5);
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
-}
-
-#header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top,    #4A382F, #2D231D);
-  background: -webkit-linear-gradient(top, #4A382F, #2D231D);
-  background: -ms-linear-gradient(top,     #4A382F, #2D231D);
-  background: -o-linear-gradient(top,      #4A382F, #2D231D);
-  background: linear-gradient(top,         #4A382F, #2D231D);
-}
-
-#header_wrap .inner {
-  padding: 50px 10px 30px 10px;
-}
-
-#project_title {
-  margin: 0;
-  color: #fff;
-  font-size: 42px;
-  font-weight: 700;
-  text-shadow: #111 0px 0px 10px;
-}
-
-#project_tagline {
-  color: #fff;
-  font-size: 24px;
-  font-weight: 300;
-  background: none;
-  text-shadow: #111 0px 0px 10px;
-}
-
-#downloads {
-  position: absolute;
-  width: 210px;
-  z-index: 10;
-  bottom: -40px;
-  right: 0;
-  height: 70px;
-  background: url('../images/icon_download.png') no-repeat 0% 90%;
-}
-
-.zip_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
-}
-
-.tar_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom right;
-  margin-left: 10px;
-}
-
-.zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
-}
-
-.tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
-}
-
-#main_content_wrap {
-  background: #E0EFEC;
-}
-
-#main_content {
-  padding-top: 40px;
-}
-
-#footer_wrap {
-  background: #4A382F;
-}
-
-
-
-/*******************************************************************************
-Small Device Styles
-*******************************************************************************/
+/* ================================== */
+/* MEDIA QUERIES */
 
 @media screen and (max-width: 480px) {
   body {
-    font-size:14px;
-  }
-
-  #downloads {
-    display: none;
-  }
-
-  .inner {
-    min-width: 320px;
-    max-width: 480px;
-  }
-
-  #project_title {
-  font-size: 32px;
-  }
-
-  h1 {
-    font-size: 28px;
-  }
-
-  h2 {
-    font-size: 24px;
-  }
-
-  h3 {
-    font-size: 21px;
-  }
-
-  h4 {
-    font-size: 18px;
-  }
-
-  h5 {
     font-size: 14px;
   }
+}
 
-  h6 {
-    font-size: 12px;
+@media screen and (min-width: 600px) {
+  p {
+    font-size: 1.05em;
   }
-
-  code, pre {
-    min-width: 320px;
-    max-width: 480px;
-    font-size: 11px;
+  #header_wrap {
+    height: 100px;
   }
+  #main_content {
+    box-shadow: rgba(0,0,0,.3) 0 2px 5px;
+    margin: -30px auto 20px;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  #main_content_wrap {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  #project_title {
+    font-size: 2.7em;
+  }
+  #project_tagline {
+    font-size: .8em;
+  }
+}
 
+@media screen and (min-width: 926px) {
+  #project_title {
+    font-size: 3.2em;
+  }
+  #project_tagline {
+    font-size: 1.2em;
+  }
 }
