Comentarios en los CSS

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,6 +1,5 @@
 /*******************************************************************************
-Slate Theme for GitHub Pages
-by Jason Costello, @jsncostello
+OmbuShop - Github theme page
 *******************************************************************************/
 
 @import url(pygment_trac.css);
