--- a/templates/show.liquid
+++ b/templates/show.liquid
@@ -86,7 +86,7 @@
                 <option value="{{ possible_value.id }}">{{ possible_value.name }}</option>
               {% endfor %}
             
-            </select>
+            </select><br />
           {% endfor %}
         </div>
       {% else %}  
