--- a/stylesheets/products.css
+++ b/stylesheets/products.css
@@ -367,14 +367,14 @@ p button img {  margin: 0 5px 0 0 }
   width: 100%;
 }
 ul.product-listing li.product {
-  border: 1px solid #d0d0d0;
+  border: 1px solid #eee;
   float: left;
   margin: 10px;
   text-align: center;
   width: 220px;
 }
 ul.product-listing li.product:hover {
-  border-color: #aaa;
+  border-color: #ccc;
 }
 ul.product-listing li.product a.image-link-container {
   display: block;
@@ -387,8 +387,8 @@ ul.product-listing li.product a.image-link-container img {
   width: 220px;
 }
 ul.product-listing li.product .product-info {
-  background: #efefef;
-  border-top: 1px solid #CCC;
+  background: #f5f5f5;
+  border-top: 1px solid #eee;
   color: #333;
   font-size: 12px;
   font-weight: 700;
@@ -403,22 +403,23 @@ ul.product-listing li.product .product-info {
   transition-property: background color;
 }
 ul.product-listing li.product:hover .product-info {
-  background: #ccc;
+  background: #eee;
 }
 ul.product-listing li.product a {
   display: block;
   text-decoration: none;
 }
 ul.product-listing li.product h4.product-name {
-  font-size: 17px;
+  font-size: 14px;
   font-weight: 700;
   margin: 0;
 }
 ul.product-listing li.product .product-price {
   display: block;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 300;
   margin: 0;
+  line-height: 1.9;
 }
 ul.product-listing li.product .product-name a {
   color: #444;
@@ -537,7 +538,7 @@ ul.thumbnails li.selected {  border-color: #999 }
 #cart-form button.large {
   font-size: 14px;
   padding: 5px 10px;
-  margin-top: -20px;
+  margin-top: 10px;
   margin-bottom:20px;
 }
 #cart-form input {
