Minified and not minified Product.js made available

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -47,7 +47,7 @@
     <script src='/themes/minimost/javascripts/jquery.masonry.min.js' type='text/javascript'></script>
     <script src='/themes/minimost/javascripts/jquery.imagesloaded.min.js' type='text/javascript'></script>
 
-    <script src='/themes/minimost/javascripts/product.js' type='text/javascript'></script>
+    <script src='/themes/minimost/javascripts/product.min.js' type='text/javascript'></script>
 
     {{ content_for_header }}
 
