--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -147,13 +147,13 @@
           </ul>
           <div id="contact-info">
             <ul>
-              <li class="facebook" title="Facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-              <li class="pinterest" title="Pinterest"><a href="#" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
-              <li class="twitter" title="Twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-              <li class="instagram" title="Instagram"><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-              <li class="google-plus" title="Google Plus"><a href="#" target="_blank"></a></li>
-              <li class="youtube" title="Youtube"><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
-              <li class="phone"><i class="fa fa-phone"></i>678-678-6789</li>
+              {% for social_network in social_networks %}
+                {% if social_network[0] == "phone" %}
+                  <li class="phone"><i class="fa fa-phone"></i> {{ social_network[1] }}</li>
+                {% else %}
+                  <li class="{{ social_network[0] }}"><a href="{{ social_network[1] }}" target="_blank"><i class="fa fa-{{ social_network[0] }}"></i></a></li>
+                {% endif %}
+              {% endfor %}
             </ul>
           </div>
           <div id="search_bar">
@@ -191,7 +191,11 @@
                 <div id="contact-info">
                   <h1>Contactanos</h1>
                   <ul>
-                    <li class="phone"><i class="fa fa-phone"></i>678-678-6789</li>
+                    {% for social_network in social_networks %}
+                      {% if social_network[0] == "phone" %}
+                        <li class="phone"><i class="fa fa-phone"></i> {{ social_network[1] }}</li>
+                      {% endif %}
+                    {% endfor %}
                   </ul>
                 </div>
                 <p>{{ shop.footer }}</p>
@@ -211,12 +215,11 @@
                 <h1>Seguinos</h1>
                 <div id="contact-info">
                   <ul>
-                    <li class="facebook" title="Facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                    <li class="pinterest" title="Pinterest"><a href="#" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
-                    <li class="twitter" title="Twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    <li class="instagram" title="Instagram"><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                    <li class="google-plus" title="Google Plus"><a href="#" target="_blank"></a></li>
-                    <li class="youtube" title="Youtube"><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                    {% for social_network in social_networks %}
+                      {% if social_network[0] != "phone" %}
+                        <li class="{{ social_network[0] }}"><a href="{{ social_network[1] }}" target="_blank"><i class="fa fa-{{ social_network[0] }}"></i></a></li>
+                      {% endif %}
+                    {% endfor %}
                   </ul>
               </div>
             </div>
